The ARIA Grid classes should handle ARIA Tables too

ARIA introduced role="table" in ARIA 1.1, but to the browser it behaves
the same as role="grid". We should be using AXARIAGrid and
AXARIAGridCell for role="table" and role="cell", respectively.

As a follow-up we could rename the classes, too - but first this is
the simplest change that just fixes the user-facing bug.

Bug: 730928
Change-Id: I63bbe927b54732e2e4f5027c81933a7399deb631
Reviewed-on: https://chromium-review.googlesource.com/930130
Commit-Queue: Dominic Mazzoni <dmazzoni@chromium.org>
Reviewed-by: Nektarios Paisios <nektar@chromium.org>
Cr-Commit-Position: refs/heads/master@{#538554}
Former-commit-id: 0c8b6d1ede042904a1ec42ccdc2b4d6b89d84931